--- a/updoc/locale/fr_FR/LC_MESSAGES/updoc.po
+++ b/updoc/locale/fr_FR/LC_MESSAGES/updoc.po
@@ -1,148 +1,615 @@
-# No description yet.
-# Copyright (C) flanker
-# This file is distributed under the same license as the {package} package.
-# flanker <flanker@19pouces.net>, 2013.
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: updoc 0.1\n"
+"Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-11-13 23:45+0100\n"
+"POT-Creation-Date: 2016-01-29 07:27+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: flanker <flanker@19pouces.net>\n"
-"Language-Team: flanker <flanker@19pouces.net>\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: updoc/login.py:9 updoc/views.py:56 updoc/views.py:75
-msgid "Name"
-msgstr "Nom"
+#: updoc/feeds.py:30
+#, python-format
+msgid "Documentations with keyword %(kw)s"
+msgstr "Documents avec le mot-clef %(kw)s"
 
-#: updoc/login.py:10 updoc/views.py:57 updoc/views.py:77
-msgid "Keywords"
-msgstr "Mots-clefs"
+#: updoc/feeds.py:65
+msgid "Favorite documentations"
+msgstr "Documents préférées"
 
-#: updoc/models.py:40
-msgid "keyword"
-msgstr "mot-clef"
+#: updoc/feeds.py:66
+#, python-format
+msgid "Documentations of %(n)s"
+msgstr "Documents de %(n)s"
 
-#: updoc/models.py:54
-msgid "uid"
-msgstr "uid"
+#: updoc/feeds.py:76
+msgid "Most viewed documentations"
+msgstr "Documentations les plus lues"
 
-#: updoc/models.py:55
-msgid "title"
-msgstr "titre"
+#: updoc/feeds.py:113
+msgid "Last documentations"
+msgstr "Dernières documentations"
 
-#: updoc/models.py:56
-msgid "path"
-msgstr "chemin"
+#: updoc/feeds.py:125
+msgid "Most recent documentations"
+msgstr "Documentations récentes"
 
-#: updoc/models.py:59
-msgid "upload time"
-msgstr "date d'ajout"
+#: updoc/feeds.py:163
+msgid "List of bookmarks URLs."
+msgstr "Liste des marque-pages."
 
-#: updoc/models.py:66
-msgid "sample person"
-msgstr ""
-
-#: updoc/models.py:67
-msgid "sample persons"
-msgstr ""
-
-#: updoc/models.py:79
-msgid "last"
-msgstr ""
-
-#: updoc/sample.py:41
-msgid "This message should be translated"
-msgstr ""
-
-#: updoc/utils.py:21
-msgid "Documents"
-msgstr "Documents"
-
-#: updoc/utils.py:23
-msgid "Downloads"
-msgstr "Téléchargements"
-
-#: updoc/utils.py:25
-msgid "Library"
-msgstr "Bibliothèque"
-
-#: updoc/utils.py:27
-msgid "Movies"
-msgstr "Films"
-
-#: updoc/utils.py:29
-msgid "Music"
-msgstr "Musique"
-
-#: updoc/utils.py:31
-msgid "Pictures"
-msgstr "Images"
-
-#: updoc/utils.py:33
-msgid "Public"
-msgstr "Public"
-
-#: updoc/utils.py:35
-msgid "System"
-msgstr "Système"
-
-#: updoc/utils.py:79
-msgid "root"
-msgstr "Racine"
-
-#: updoc/views.py:44
+#: updoc/forms.py:10
 msgid "file"
 msgstr "Fichier"
 
-#: updoc/views.py:76
+#: updoc/forms.py:22 updoc/forms.py:30 updoc/templates/updoc/list_dir.html:16
+msgid "Name"
+msgstr "Nom"
+
+#: updoc/forms.py:23
 msgid "Please enter a name"
 msgstr "Merci d'entrer un nom"
 
-#: updoc/views.py:78
+#: updoc/forms.py:24 updoc/forms.py:31 updoc/templates/updoc/index.html.py:44
+msgid "Keywords"
+msgstr "Mots-clefs"
+
+#: updoc/forms.py:25
 msgid "Please enter some keywords"
 msgstr "Merci d'entrer des mots-clefs"
 
-#: updoc/views.py:93
-msgid "File successfully uploaded"
-msgstr "Fichier ajouté correctement"
+#: updoc/forms.py:29
+msgid "Filename"
+msgstr "Nom de fichier"
 
-#: updoc/views.py:103
-msgid "Unable to upload this file"
-msgstr "Impossible d'ajouter le fichier"
+#: updoc/forms.py:36
+msgid "URL to rewrite"
+msgstr "URL à réécrire"
 
-#: updoc/views.py:106
-msgid "Upload a new file"
-msgstr "Ajouter un fichier"
+#: updoc/forms.py:37 updoc/models.py:135
+msgid "New URL"
+msgstr "Nouvelle URL"
 
-#: updoc/views.py:117
+#: updoc/models.py:54
+msgid "keyword"
+msgstr "mot-clef"
+
+#: updoc/models.py:68
+msgid "uid"
+msgstr "uid"
+
+#: updoc/models.py:69
+msgid "title"
+msgstr "titre"
+
+#: updoc/models.py:70
+msgid "path"
+msgstr "chemin"
+
+#: updoc/models.py:73
+msgid "upload time"
+msgstr "date d'ajout"
+
+#: updoc/models.py:80
+msgid "documentation"
+msgstr "Document"
+
+#: updoc/models.py:81
+msgid "documentations"
+msgstr "Documents"
+
+#: updoc/models.py:125
+msgid "last"
+msgstr "dernière"
+
+#: updoc/models.py:134
+msgid "Original URL"
+msgstr "URL d'origine"
+
+#: updoc/models.py:138
+msgid "Rewritten URL"
+msgstr "URL à réécrire"
+
+#: updoc/models.py:139
+msgid "Rewritten URLs"
+msgstr "URL à réécrire"
+
+#: updoc/models.py:150
+msgid "URL to proxify"
+msgstr "URL à proxifier"
+
+#: updoc/models.py:153
+msgid "Proxy to use"
+msgstr "Proxy à utiliser"
+
+#: updoc/models.py:154
+msgid ""
+"e.g. proxy.example.com:8080. Leave it empty if direct connexion. Several "
+"values can be given, separated by semi-colons (;)."
+msgstr ""
+"ex. proxy.example.com:8080. Laisser vide pour une connexion directe. "
+"Plusieurs valeurs peuvent être spécifiées, séparées par ;."
+
+#: updoc/models.py:156
+msgid "Priority"
+msgstr "Priorité"
+
+#: updoc/models.py:157
+msgid "Low priorities are written first in proxy.pac"
+msgstr "Les proxys sont écrits par ordre de priorité croissante."
+
+#: updoc/models.py:160
+msgid "Proxyfied host"
+msgstr "Hôte proxyfié"
+
+#: updoc/models.py:161
+msgid "Proxified hosts"
+msgstr "Hôtes proxyfiés"
+
+#: updoc/models.py:164
+#, python-format
+msgid "%(h)s via %(p)s"
+msgstr "%(h)s via %(p)s"
+
+#: updoc/models.py:184 updoc/models.py:200
+msgid "name"
+msgstr "Nom"
+
+#: updoc/models.py:191
+msgid "favorite group"
+msgstr "groupe de signets"
+
+#: updoc/models.py:192
+msgid "favorite groups"
+msgstr "groupes de signets"
+
+#: updoc/models.py:199 updoc/utils.py:82 updoc/views.py:329
+msgid "root"
+msgstr "Racine"
+
+#: updoc/models.py:201
+msgid "URL"
+msgstr "URL"
+
+#: updoc/models.py:204
+msgid "element"
+msgstr "élément"
+
+#: updoc/models.py:205
+msgid "elements"
+msgstr "éléments"
+
+#: updoc/signals.py:71
+#, python-format
+msgid "%(name)s has been uploaded and indexed"
+msgstr "%(name)s a été ajouté et indexé."
+
+#: updoc/signals.py:78
+#, python-format
+msgid "An error happened during the processing of %(name)s: %(error)s"
+msgstr "Une erreur est survenue lors du traitement de %(name)s : %(error)s."
+
+#: updoc/signals.py:81
+msgid "Unable to process query"
+msgstr "Impossible de traiter la requête"
+
+#: updoc/signals.py:96
+#, python-format
+msgid "%(name)s has been deleted"
+msgstr "%(name)s a été supprimé"
+
+#: updoc/templates/404.html:4
+msgid "Page not found."
+msgstr "Page non trouvée."
+
+#: updoc/templates/404.html:5
+msgid "Sorry, the page you requested cannot be found."
+msgstr "La page demandée n'a pas été trouvée."
+
+#: updoc/templates/500.html:4
+msgid "Don't panic!"
+msgstr "Pas de panique !"
+
+#: updoc/templates/500.html:5
+msgid "A strange error happened. Don't worry, admins have been warned."
+msgstr "Une erreur étrange est arrivée. Pas de souci, les admins sont prévenus."
+
+#: updoc/templates/updoc/base.html:13 updoc/templates/updoc/index.html:14
+#: updoc/templates/updoc/index.html:33 updoc/templates/updoc/my_docs.html:16
+msgid "Index"
+msgstr "Index"
+
+#: updoc/templates/updoc/base.html:15
+msgid "Upload a document"
+msgstr "Ajout…"
+
+#: updoc/templates/updoc/base.html:18 updoc/views.py:182
 msgid "My documents"
 msgstr "Mes documents"
 
-#: updoc/views.py:129
-#, python-format
-msgid "%(doc)s successfully deleted"
-msgstr "%(doc)s a été supprimé correctement"
+#: updoc/templates/updoc/base.html:26 updoc/views.py:138 updoc/views.py:149
+msgid "Bookmarks"
+msgstr "Marque-pages"
 
-#: updoc/views.py:131
-#, python-format
-msgid "Unable to delete %(doc)s "
-msgstr "Impossible de supprimer %(doc)s"
+#: updoc/templates/updoc/base.html:27
+msgid "proxy.pac"
+msgstr "proxy.pac"
 
-#: updoc/views.py:252
+#: updoc/templates/updoc/base.html:37
+msgid "Administration"
+msgstr "Administration"
+
+#: updoc/templates/updoc/base.html:45
+msgid "Search"
+msgstr "Recherche"
+
+#: updoc/templates/updoc/base.html:59
+msgid "Matthieu Gallet, 2016."
+msgstr "Matthieu Gallet, 2016."
+
+#: updoc/templates/updoc/delete_doc_confirm.html:3
+#: updoc/templates/updoc/delete_url_confirm.html:3
+msgid "Close"
+msgstr "Fermé"
+
+#: updoc/templates/updoc/delete_doc_confirm.html:5
+msgid "Are you sure to delete this document?"
+msgstr "Êtes-vous sûr de supprimer ce document ?"
+
+#: updoc/templates/updoc/delete_doc_confirm.html:8
+#, python-format
+msgid "Are you sure to delete %(name)s? This action cannot be undone."
+msgstr "Êtes-vous sûr de supprimer %(name)s ? Cette action ne peut être annulée."
+
+#: updoc/templates/updoc/delete_doc_confirm.html:12
+#: updoc/templates/updoc/delete_url_confirm.html:12
+#: updoc/templates/updoc/doc_properties.html:50
+#: updoc/templates/updoc/doc_properties.html:61
+msgid "Cancel"
+msgstr "Annuler"
+
+#: updoc/templates/updoc/delete_doc_confirm.html:13
+#: updoc/templates/updoc/delete_url_confirm.html:13
+#: updoc/templates/updoc/doc_properties.html:33
+#: updoc/templates/updoc/my_docs.html:21 updoc/templates/updoc/my_docs.html:53
+msgid "Delete"
+msgstr "Supprimer"
+
+#: updoc/templates/updoc/delete_url_confirm.html:5
+msgid "Are you sure to delete this URL replacement?"
+msgstr "Êtes-vous sûr de supprimer ce remplacement d'URL ?"
+
+#: updoc/templates/updoc/delete_url_confirm.html:8
+#, python-format
+msgid ""
+"Are you sure to delete the replacement of %(src)s by %(dst)s? This action "
+"cannot be undone."
+msgstr "Êtes-vous sûr de supprimer le remplacement de %(src)s par %(dst)s ? Cette action ne peut pas être annulée."
+
+#: updoc/templates/updoc/doc_properties.html:5
+msgid "Properties"
+msgstr "Propriétés"
+
+#: updoc/templates/updoc/doc_properties.html:10
+msgid "Uploaded by:"
+msgstr "Ajouté par : "
+
+#: updoc/templates/updoc/doc_properties.html:18
+msgid "Alternative link (no authentication)"
+msgstr "Lien sans authentification"
+
+#: updoc/templates/updoc/doc_properties.html:25
+msgid "Download as ZIP"
+msgstr "Format ZIP"
+
+#: updoc/templates/updoc/doc_properties.html:44
+msgid "Document:"
+msgstr "Documents :"
+
+#: updoc/templates/updoc/doc_properties.html:47
+msgid "please enter a name"
+msgstr "merci d'entrer un nom"
+
+#: updoc/templates/updoc/doc_properties.html:51
+#: updoc/templates/updoc/doc_properties.html:62
+msgid "Save"
+msgstr "Enregistrer"
+
+#: updoc/templates/updoc/doc_properties.html:55
+msgid "Keywords:"
+msgstr "Mots-clefs :"
+
+#: updoc/templates/updoc/doc_properties.html:58
+msgid "Please enter keywords"
+msgstr "Merci d'entrer des mots-clefs"
+
+#: updoc/templates/updoc/index.html:7
+msgid "Last uploaded documents"
+msgstr "Derniers documents"
+
+#: updoc/templates/updoc/index.html:18 updoc/templates/updoc/index.html:37
+#: updoc/templates/updoc/my_docs.html:25 updoc/templates/updoc/my_docs.html:36
+msgid "No document found"
+msgstr "Aucun document trouvé"
+
+#: updoc/templates/updoc/index.html:25
+msgid "Recently viewed"
+msgstr "Visites récentes"
+
+#: updoc/templates/updoc/index.html:25
+msgid "Feed with your most viewed documents"
+msgstr "Vos documents préférés"
+
+#: updoc/templates/updoc/index.html:45 updoc/views.py:407
+msgid "All documents"
+msgstr "Tous les documents"
+
+#: updoc/templates/updoc/index.html:54
+msgid "No keyword found"
+msgstr "Aucun mot-clef n'a été trouvé"
+
+#: updoc/templates/updoc/list_dir.html:17
+msgid "Size"
+msgstr "Taille"
+
+#: updoc/templates/updoc/list_dir.html:18
+msgid "Modified on"
+msgstr "Modifié le"
+
+#: updoc/templates/updoc/list_favorites.html:5
+msgid "Groups"
+msgstr "Groupes de signets"
+
+#: updoc/templates/updoc/list_favorites.html:14
+msgid "No group found"
+msgstr "Aucun groupe de signets trouvé"
+
+#: updoc/templates/updoc/list_favorites.html:24
+msgid "No element found."
+msgstr "Aucun signet trouvé"
+
+#: updoc/templates/updoc/my_docs.html:12
+msgid ", upload date: "
+msgstr ", date d'ajout : "
+
+#: updoc/templates/updoc/my_docs.html:30
+#, python-format
+msgid "%(total)s documents found."
+msgstr "%(total)s documents trouvés au total."
+
+#: updoc/templates/updoc/my_docs.html:43
+msgid "My rewritten URLs"
+msgstr "URL à réécrire"
+
+#: updoc/templates/updoc/my_docs.html:49
+msgid "redirected to:"
+msgstr "remplacé par : "
+
+#: updoc/templates/updoc/my_docs.html:57
+msgid "No URL found"
+msgstr "Aucune URL trouvée"
+
+#: updoc/templates/updoc/my_docs.html:60
+msgid "Add a new URL to rewrite"
+msgstr "Ajouter une nouvelle URL à remplacer"
+
+#: updoc/templates/updoc/my_docs.html:62
+msgid "This URL will be rewritten in all HTML, CSS and JS files."
+msgstr "Cette URL sera remplacée dans tous les fichiers HTML, CSS et JS."
+
+#: updoc/templates/updoc/my_docs.html:68
+msgid "Add this URL"
+msgstr "Ajouter cette URL"
+
+#: updoc/templates/updoc/upload.html:2 updoc/views.py:228
+msgid "Upload a new file"
+msgstr "Ajouter un fichier"
+
+#: updoc/templates/updoc/upload.html:19
+msgid "loading…"
+msgstr "chargement…"
+
+#: updoc/templates/updoc/upload.html:20
+msgid "Processing and indexing archive…"
+msgstr "Traitement et indexation de l'archive…"
+
+#: updoc/templates/updoc/upload.html:24
+msgid "An error occured during the processing."
+msgstr "Une erreur est survenue lors du traitement."
+
+#: updoc/templates/updoc/upload.html:29
+msgid ""
+"You can also upload a doc with curl. Any documentation with the same name "
+"(belonging to the same user) will be replaced!"
+msgstr ""
+"Vous pouvez également ajouter une doc via cURL. Toute documentation avec le "
+"même nom sera remplacée !"
+
+#: updoc/templates/updoc/upload_doc_progress.html:6
+msgid "Validate!"
+msgstr "Valider !"
+
+#: updoc/utils.py:24
+msgid "Documents"
+msgstr "Documents"
+
+#: updoc/utils.py:26
+msgid "Downloads"
+msgstr "Téléchargements"
+
+#: updoc/utils.py:28
+msgid "Library"
+msgstr "Bibliothèque"
+
+#: updoc/utils.py:30
+msgid "Movies"
+msgstr "Films"
+
+#: updoc/utils.py:32
+msgid "Music"
+msgstr "Musique"
+
+#: updoc/utils.py:34
+msgid "Pictures"
+msgstr "Images"
+
+#: updoc/utils.py:36
+msgid "Public"
+msgstr "Public"
+
+#: updoc/utils.py:38
+msgid "System"
+msgstr "Système"
+
+#: updoc/views.py:115 updoc/views.py:396
+msgid "You must be logged to see documentations."
+msgstr "Vous devez être connectés pour voir les documentations."
+
+#: updoc/views.py:126 updoc/views.py:405
+msgid "Updoc"
+msgstr "Updoc"
+
+#: updoc/views.py:128
+msgid "Recent uploads"
+msgstr "Ajouts récents"
+
+#: updoc/views.py:137
+msgid "You must be logged to see this page."
+msgstr "Vous devez être connectés pour voir cette page"
+
+#: updoc/views.py:176
+#, python-format
+msgid "URL %(src)s will be rewritten as %(dst)s"
+msgstr "L'URL %(src)s sera remplacée par %(dst)s"
+
+#: updoc/views.py:193
+#, python-format
+msgid "The replacement of %(src)s by %(dst)s has been removed"
+msgstr "Le remplacement de %(src)s par %(dst)s a été supprimée."
+
+#: updoc/views.py:202
+#, python-format
+msgid "%(doc)s will be quickly deleted"
+msgstr "%(doc)s sera prochainement supprimé"
+
+#: updoc/views.py:213
+msgid "File successfully uploaded"
+msgstr "Fichier ajouté correctement"
+
+#: updoc/views.py:223 updoc/views.py:225
+msgid "Unable to upload this file"
+msgstr "Impossible d'ajouter le fichier"
+
+#: updoc/views.py:263
+msgid "You must be logged to upload files.\n"
+msgstr "Vous devez être connectés pour ajouter des éléments.\n"
+
+#: updoc/views.py:265
+msgid "Only POST requests are allowed.\n"
+msgstr "Seules les requêtes POST sont autorisées.\n"
+
+#: updoc/views.py:268
+msgid "You must supply filename, name and keywords in your query.\n"
+msgstr "Vous devez fournir le nom de fichier, le nom et les mots-clefs dans votre requête.\n"
+
+#: updoc/views.py:279
+msgid "Empty file. You must POST a valid file.\n"
+msgstr "Fichier vide. Vous devez envoyer un fichier valide.\n"
+
+#: updoc/views.py:292
+msgid "File successfully uploaded. It will be uncompressed and indexed.\n"
+msgstr "Fichier ajouté correctement. Il sera indexé rapidement.\n"
+
+#: updoc/views.py:358
+msgid "You must be logged to search across docs."
+msgstr "Vous devez être connectés pour chercher dans les documentations."
+
+#: updoc/views.py:363
+msgid "Unable to use indexed search."
+msgstr "Impossible d'utiliser la recherche indexée."
+
+#: updoc/views.py:386
 msgid "Search results"
 msgstr "Résultats"
 
-#: updoc/views.py:258
-msgid "Updoc"
-msgstr "UpDoc"
+#~ msgid "Unable to delete %(doc)s "
+#~ msgstr "Impossible de supprimer %(doc)s"
 
-#: updoc/tests/test_translation.py:32
-msgid "test_string"
-msgstr ""
+#~ msgid "Users"
+#~ msgstr "Utilisateurs"
+
+#~ msgid "Read .ini configuration files: "
+#~ msgstr "Fichier(s) de configuration lu(s) :"
+
+#~ msgid "Content of the configuration, including default values:"
+#~ msgstr "Contenu du fichier, avec les valeurs par défaut :"
+
+#~ msgid "Permission denied"
+#~ msgstr "Permission refusée"
+
+#~ msgid "You do not have the permission to access this page."
+#~ msgstr "Vous n'avez pas la permission d'accéder à cette page"
+
+#~ msgid "Server error"
+#~ msgstr "Erreur serveur"
+
+#~ msgid "An error was encountered on the server."
+#~ msgstr "Une erreur est survenue sur le serveur"
+
+#~ msgid "Admin"
+#~ msgstr "Admin"
+
+#~ msgid "Delete this file?"
+#~ msgstr "Voulez-vous supprimer ce fichier ?"
+
+#~ msgid "Click here to edit the title, ESC to validate."
+#~ msgstr "Ciquez ici pour modifier le titre (ESC pour valider)"
+
+#~ msgid "Click to edit title"
+#~ msgstr "Cliquez pour éditer le titre"
+
+#~ msgid "Click here to edit keywords, ESC to validate."
+#~ msgstr "Ciquez ici pour modifier les mots-clefs (ESC pour valider)"
+
+#~ msgid "Click to add keywords"
+#~ msgstr "Cliquez pour les changer les mots-clefs"
+
+#~ msgid "Delete this URL?"
+#~ msgstr "Voulez-vous supprimer cette URL ?"
+
+#~ msgid "UpDoc"
+#~ msgstr "UpDoc"
+
+#~ msgid "My docs"
+#~ msgstr "Mes documents"
+
+#~ msgid "Documentations"
+#~ msgstr "Documents"
+
+#~ msgid "Most viewed feeds"
+#~ msgstr "Flux RSS des docs les plus lues."
+
+#~ msgid "&copy; Matthieu Gallet 2014, all rights reserved."
+#~ msgstr "&copy; Matthieu Gallet 2014, tous droits réservés"
+
+#~ msgid "Invalid user %(u)s"
+#~ msgstr "Utilisateur %(u)s invalide"
+
+#~ msgid "Invalid password for user %(u)s"
+#~ msgstr "Mot de passe invalide pour %(u)s"
+
+#~ msgid ""
+#~ "You must be logged to upload files. You can provide your credentials by "
+#~ "adding &username=USERNAME&password=PASSWORD to your request"
+#~ msgstr ""
+#~ "Vous devez être connectés pour ajouter des fichiers. Vous pouvez être "
+#~ "authentifiés en ajoutant&username=USERNAME&password=PASSWORD à votre "
+#~ "requête"
